--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:fullBackupContent="false"
         android:hardwareAccelerated="true"
         android:icon="@drawable/icon"
-        android:label="OptiGlass"
+        android:label="OptiVision"
         android:supportsRtl = "true"
         android:theme="@style/Theme.AppCompat" >
         <meta-data
@@ -30,7 +30,7 @@
 
         <activity android:name=".BarcodeCaptureActivity"
             android:screenOrientation="landscape"
-            android:label="OptiGlass">
+            android:label="OptiVision">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
